<resources>
    <string name="app_name">Caht Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="first_name">first name</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="password_register">Password</string>
    <string name="create_account">Create Account</string>
    <string name="create_new_account">Create a New Account</string>
    <string name="loading">Loading....</string>
    <string name="create_account_bt">Create Account</string>
    <string name="no_rooms_joined_yet">No rooms joined yet</string>
    <string name="create_new_room">Create New Room</string>
    <string name="enter_room_name">Enter Room Name</string>
    <string name="select_room_category">Select Room Category</string>
    <string name="enter_room_descreption">Enter Room Descreption</string>
    <string name="create">Create</string>
    <string name="type_a_message">type_a_message</string>
    <string name="send">send</string>

    <string-array name="rooms_fragments_titles">
        <item>MyRoomsFragment</item>
        <item>AllRoomsFragment</item>
    </string-array>
</resources>